--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <h1>Mạng máy tính nâng cao</h1>
         <h2>Project_03</h2>
 
+        <p>23127177 - Lê Nhật Duy</p>
+        <p>23127200 - Nguyễn Minh Kha</p>
+
 
     </div>
 </body>
