--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 </head>
 <body>
     <div class="container">
-        <!-- <h1>Mạng máy tính nâng cao</h1>
+        <h1>Mạng máy tính nâng cao</h1>
         <h2>Project_03</h2>
 
         <p>23127177 - Lê Nhật Duy</p>
-        <p>23127200 - Nguyễn Minh Kha</p> -->
+        <p>23127200 - Nguyễn Minh Kha</p>
 
 
     </div>
