--- a/index.html
+++ b/index.html
@@ -1,48 +1,132 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <title>Mạng máy tính nâng cao - Project 03</title>
+    <meta charset="UTF-8" />
+    <title>Project Completed</title>
+
     <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: #f4f6f8;
-            margin: 0;
-            padding: 0;
+        * {
+            box-sizing: border-box;
+            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         }
 
-        .container {
+        body {
+            margin: 0;
+            height: 100vh;
+            background: linear-gradient(135deg, #1d2671, #c33764);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #ffffff;
+        }
+
+        .card {
+            background: rgba(255, 255, 255, 0.15);
+            backdrop-filter: blur(12px);
+            padding: 40px 55px;
+            border-radius: 20px;
             text-align: center;
-            margin-top: 100px;
+            box-shadow: 0 25px 50px rgba(0, 0, 0, 0.3);
+            animation: fadeIn 1.2s ease;
+            max-width: 420px;
+        }
+
+        .check {
+            width: 90px;
+            height: 90px;
+            border-radius: 50%;
+            background: #2ecc71;
+            margin: 0 auto 25px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            animation: pop 0.6s ease;
+        }
+
+        .check::after {
+            content: "✓";
+            font-size: 48px;
+            font-weight: bold;
+            color: #ffffff;
         }
 
         h1 {
-            color: #2c3e50;
-            margin-bottom: 10px;
+            margin: 10px 0 5px;
+            font-size: 28px;
+            letter-spacing: 1px;
         }
 
         h2 {
-            color: #34495e;
-            margin-bottom: 20px;
+            margin: 10px 0 5px;
+            font-size: 18px;
+            font-weight: normal;
+            opacity: 0.95;
         }
 
         p {
-            font-size: 18px;
-            color: #555;
             margin: 6px 0;
+            font-size: 14.5px;
+            opacity: 0.9;
+        }
+
+        .info {
+            margin-top: 18px;
+            padding-top: 15px;
+            border-top: 1px solid rgba(255, 255, 255, 0.25);
+        }
+
+        .tag {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 7px 16px;
+            border-radius: 25px;
+            background: rgba(255, 255, 255, 0.25);
+            font-size: 13px;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes pop {
+            0% {
+                transform: scale(0);
+            }
+            80% {
+                transform: scale(1.1);
+            }
+            100% {
+                transform: scale(1);
+            }
         }
     </style>
 </head>
+
 <body>
-    <div class="container">
-        <h1>Mạng máy tính nâng cao</h1>
-        <h2>Project_03</h2>
 
-        <p>23127177 - Lê Nhật Duy</p>
-        <p>23127200 - Nguyễn Minh Kha</p>
-        <p>Demo</p>
+    <div class="card">
+        <div class="check"></div>
 
+        <h1>PROJECT COMPLETED</h1>
+        <p>Dự án đã được triển khai thành công</p>
 
+        <div class="info">
+            <h2>Mạng máy tính nâng cao</h2>
+            <p><strong>Project_03</strong></p>
+
+            <p>23127177 - Lê Nhật Duy</p>
+            <p>23127200 - Nguyễn Minh Kha</p>
+        </div>
+
+        <div class="tag">CI/CD with Jenkins & Docker</div>
     </div>
+
 </body>
 </html>
