--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
             <h2>Mạng máy tính nâng cao</h2>
             <p><strong>Project_03</strong></p>
 
-            <p>23127177 - Lê Nhật Duy</p>
-            <p>23127200 - Nguyễn Minh Kha</p>
+            <!-- <p>23127177 - Lê Nhật Duy</p>
+            <p>23127200 - Nguyễn Minh Kha</p> -->
         </div>
 
         <div class="tag">CI/CD with Jenkins & Docker</div>
