--- a/index.html
+++ b/index.html
@@ -1,3 +1,147 @@
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project Completed</title>
+    <style>
+        /* Reset cơ bản */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background: linear-gradient(135deg, #74ebd5, #ACB6E5);
+            color: #333;
+        }
+
+        .card {
+            background: #fff;
+            border-radius: 20px;
+            box-shadow: 0 15px 40px rgba(0,0,0,0.2);
+            padding: 40px 30px;
+            text-align: center;
+            max-width: 400px;
+            width: 90%;
+            position: relative;
+            overflow: hidden;
+            animation: fadeIn 1s ease forwards;
+        }
+
+        /* Checkmark animation */
+        .check {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            background: #4CAF50;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0 auto 20px;
+            position: relative;
+        }
+
+        .check::after {
+            content: '';
+            width: 25px;
+            height: 50px;
+            border-left: 5px solid white;
+            border-bottom: 5px solid white;
+            transform: rotate(-45deg);
+            animation: drawCheck 0.5s ease forwards;
+        }
+
+        @keyframes drawCheck {
+            0% {
+                width: 0;
+                height: 0;
+                opacity: 0;
+            }
+            100% {
+                width: 25px;
+                height: 50px;
+                opacity: 1;
+            }
+        }
+
+        h1 {
+            font-size: 24px;
+            margin-bottom: 10px;
+            color: #333;
+        }
+
+        #welcome {
+            font-size: 18px;
+            margin-bottom: 20px;
+            color: #555;
+        }
+
+        .info h2 {
+            font-size: 20px;
+            margin-bottom: 5px;
+            color: #222;
+        }
+
+        .info p {
+            font-size: 16px;
+            color: #555;
+            margin: 2px 0;
+        }
+
+        .tag {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 8px 16px;
+            background: #4CAF50;
+            color: #fff;
+            border-radius: 50px;
+            font-size: 14px;
+            font-weight: 500;
+            transition: 0.3s;
+        }
+
+        .tag:hover {
+            background: #45a049;
+            cursor: default;
+        }
+
+        /* Animation fade in */
+        @keyframes fadeIn {
+            0% {opacity: 0; transform: translateY(20px);}
+            100% {opacity: 1; transform: translateY(0);}
+        }
+
+        /* Responsive cho màn hình nhỏ */
+        @media (max-width: 480px) {
+            .card {
+                padding: 30px 20px;
+            }
+
+            h1 {
+                font-size: 20px;
+            }
+
+            #welcome {
+                font-size: 16px;
+            }
+
+            .info h2 {
+                font-size: 18px;
+            }
+
+            .info p {
+                font-size: 14px;
+            }
+        }
+    </style>
+</head>
 <body>
 
     <div class="card">
@@ -28,3 +172,4 @@
     </script>
 
 </body>
+</html>
